mulesoft-inference/1.2/modules/ROOT/pages/configuring-image-generation-operations.adoc
= Configuring Image Generation Operations

Configure the *[Image] Generate (only Base64)* operation.

== Configure the Image Generate (only Base64) Operation

The *[Image] Generate (only Base64)* operation creates images from text descriptions using AI-powered image generation models. 

Apply the *[Image] Generate (only Base64)* operation in various scenarios, such as for:

* *Content Generation*
+
Generate images for blog posts, articles, social media, research, or design projects.

To configure the *[Image] Generate (only Base64)* operation:

include::connectors::partial$t-configure-operations.adoc[]
* *Prompt*
+
Enter the text description of the image you want to generate.

[start=3]
. In the *Additional Request Attributes* field, you can pass any additional attribute in the request payload to generate more relevant and precise LLM outputs. This step is optional.

This is the XML for this operation:

[source,xml,linenums]
----
<ms-inference:image-generation 
  doc:id="7e62e70e-eff7-4080-bb20-3d162bb84c39" 
  config-ref="OpenAIConfig" 
  doc:name="Image generation">
    <ms-inference:prompt>
      <![CDATA[A photorealistic image of a modern office building with glass facades, surrounded by landscaped gardens]]>
    </ms-inference:prompt>
</ms-inference:image-generation>
----

=== Output Configuration

This operation responds with a JSON payload containing the generated image data and metadata about the generation process. This is an example response:

[source,json,linenums]
----
{
  "payload": {
    "response": "<Base64 of image>"
  }
}
----

The operation also returns attributes that aren't within the main JSON payload, for example:

[source,json,linenums]
----
{
  "model": "Model name used",
  "promptUsed": "Revised prompt from LLM"
}
----

NOTE: The XML DSL tag for adding the additional attributes varies with each operation. Refer to the specific operation's documentation to identify the supported tag.

== See Also

* xref:index.adoc[MuleSoft Inference Connector Overview]
* xref:mulesoft-inference-connector-reference.adoc[MuleSoft Inference Connector Reference]
* https://help.mulesoft.com[MuleSoft Help Center] 